--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mila-ashtari.github.io/shopifyInternChallenge",
+  "homepage": "https://mila-ashtari.github.io/petAdopt",
   "name": "shopify-challenge",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "axios-oauth-client": "^1.3.0",
-    "firebase": "^7.19.1",
+    "firebase": "^7.24.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
