--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://mila-ashtari.github.io/petAdopt",
-  "name": "shopify-challenge",
+  "name": "pet-adopt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,10 +8,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/styles": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "axios-oauth-client": "^1.3.0",
     "firebase": "^7.24.0",
     "gh-pages": "^3.1.0",
